--- a/apps/paperless/values.yaml
+++ b/apps/paperless/values.yaml
@@ -24,6 +24,7 @@ app-template:
     PAPERLESS_TIME_ZONE: "America/Los_Angeles"
     PAPERLESS_URL: https://paperless.toostowelsandfroods.com
     PAPERLESS_ALLOWED_HOSTS: https://paperless.toostowelsandfroods.com,paperless.toolstowelsandfroods.com,192.168.50.228, localhost
+    PAPERLESS_CSRF_TRUSTED_ORIGINS: https://paperless.toolstowelsandfroods.com
     PAPERLESS_CONSUMPTION_DIR: /usr/src/paperless/consume
     PAPERLESS_MEDIA_ROOT: /usr/src/paperless/media
     USERMAP_UID: 1000
